--- a/example/build.gradle
+++ b/example/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':latte_ec')
     annotationProcessor project(':latte_compiler')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
