--- a/latte_core/build.gradle
+++ b/latte_core/build.gradle
@@ -3,7 +3,11 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 27
 
-
+    // Butterknife requires Java 8.
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         minSdkVersion 19
@@ -32,4 +36,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     api project(path: ':latte_annotation')
+    //字体图案
+    //    implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
+    //    implementation 'com.joanzapata.android.iconify:android-iconify-fontawesome:2.0.0'
+    //Fragment依赖
+    compile 'me.yokeyword:fragmentation:1.3.7'
+    compile 'me.yokeyword:fragmentation-swipeback:1.3.7'
+    //ButterKnife
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 }
