--- a/latte_core/build.gradle
+++ b/latte_core/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 27
@@ -40,9 +41,9 @@ dependencies {
     //    implementation 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
     //    implementation 'com.joanzapata.android.iconify:android-iconify-fontawesome:2.0.0'
     //Fragment依赖
-    compile 'me.yokeyword:fragmentation:1.3.7'
-    compile 'me.yokeyword:fragmentation-swipeback:1.3.7'
+    api 'me.yokeyword:fragmentation:1.3.7'
+    api 'me.yokeyword:fragmentation-swipeback:1.3.7'
     //ButterKnife
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    api 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
