--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -3,13 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ming.fastec">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".ExampleApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name=".ExampleActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,5 +22,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
