--- a/latte_core/build.gradle
+++ b/latte_core/build.gradle
@@ -46,4 +46,9 @@ dependencies {
     //ButterKnife
     api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    api 'com.squareup.okhttp3:okhttp:4.0.0'
+    api 'com.squareup.retrofit2:retrofit:2.6.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.6.0'
+    api 'com.wang.avi:library:2.1.3'
 }
