--- a/example/build.gradle
+++ b/example/build.gradle
@@ -24,6 +24,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -38,4 +39,6 @@ dependencies {
     
     api 'com.facebook.stetho:stetho:1.5.1'
     api 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
+    debugApi 'com.amitshekhar.android:debug-db:1.0.6'
 }
